# Doping_Chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml  release-image.yml
app/chat/: config.py  runtime.py  runtime_inspector.py
app/core/: __init__.py  config.py
app/play/: config.py
app/preprocess/: chunker.py  manifest.py  manual_loader.py  pdf_inspector.py  pdf_loader.py  preprocess.py  processed_inspector.py  source_inventory.py
data/: source_manifest.csv
data/operations/: source-candidates.csv
docs/architecture/: agent-mcp-extension-plan.md  field-response-manual.md  langgraph-guardrails.md  langgraph-node-tool-structure.md  langgraph-phase1-equivalence.md  minimal-agentic-graph-design.md  policy-layer-design.md  query-terms-map.md  role-separated-drug-pharmacology-rag.md  structure-audit-before-agentic.md  wada-isti-2023-korean-reviewed.md  wada-isti-korean-reviewed.md
docs/evaluation/: answer-evaluation-plan.md  field-scenario-langsmith-eval.md  langgraph-langsmith-eval-plan.md  langsmith-retrieval-eval-plan.md  langsmith-retrieval-vs-graph-comparison.md  langsmith-tool-eval-plan.md  release-quality-gate.md  retrieval-token-experiment-plan.md
docs/operations/: additional-source-candidates.md  approved-korean-manual-source.md  container-release-and-rollback.md  data-source-inventory.md  docker-production-hardening.md  (+13 more)
scripts/: __init__.py  acquire_official_pdf.py  build_approved_manual.py  data_refresh.py  isti_manual_review_template.py  isti_ocr_smoke.py  isti_section_alignment.py  mcp_smoke.py  release_quality_gate.py  staging_smoke.py
tests/: test_core_config.py  test_docker_artifacts.py  test_document_layout.py
(+241 files in other folders)
