[project]
name = "doping-chatbot"
version = "0.1.0"
description = "RAG chatbot for anti-doping information"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.0.0,<2.0.0",
    "fastapi>=0.139.0,<1.0.0",
    "gradio>=5.0.0,<6.0.0",
    "langchain-chroma>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "langsmith>=0.10.0,<1.0.0",
    "mcp>=1.27,<2.0.0",
    "openai>=2.0.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pymupdf>=1.24.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "uvicorn[standard]>=0.51.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "ruff>=0.12.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
